<resources>
    <string name="app_name">网上聊天</string>
    <string name="delete">删除聊天记录</string>
    <string name="backup">备份</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="call">Call</string>
    <string name="friends">Friends</string>
    <string name="nav_location">Location</string>
    <string name="nav_mail">Mail</string>
    <string name="user_email">qinglew@outlook.com</string>
    <string name="username">Carlos Leo</string>
    <string name="user1">User1</string>
    <string name="hello_world">Hello World</string>
    <string name="send">发送</string>
    <string name="username_text">用户名:</string>
    <string name="password_text">密  码:</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="quit_login">退出登陆</string>
    <string name="config">配置</string>
    <string name="ip">服务器IP:</string>
    <string name="port">端口号:</string>
    <string name="localhost">localhost</string>
    <string name="default_port">8888</string>
    <string name="sure">确定</string>
    <string name="phone">手机号:</string>
    <string name="select_icon">选择头像</string>
    <string name="phone_string">手机号:</string>
    <string name="remember_password">记住密码</string>
    <string name="personal_info">个人信息</string>
    <string name="icon">头像:</string>
    <string name="sure_modify">确认修改</string>
    <string name="modify_password">修改密码</string>
    <string name="person_intro">个人简介:</string>
    <string name="username_text2">用户名</string>
    <string name="modify_intro">修改个人简介</string>
    <string name="person_introduction">个人简介</string>
    <string name="modify_username">修改用户名</string>
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="user_list">用户列表</string>
    <string name="message_history">消息记录</string>
</resources>
