<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/leftLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/leftImage"
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/size_image"
            android:src="@drawable/panda" />

        <TextView
            android:id="@+id/leftNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leftImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="2dp"
            android:text="@string/user1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp" />

        <TextView
            android:id="@+id/leftMessageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/leftImage"
            android:background="@drawable/left_style"
            android:textSize="18sp"
            android:text="@string/hello_world"
            android:layout_toEndOf="@id/leftImage" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/rightImage"
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/size_image"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="0dp"
            android:layoutDirection="rtl"
            android:src="@drawable/nav_icon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="0dp" />

        <TextView
            android:id="@+id/rightNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rightImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="17dp"
            android:text="@string/username"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp" />

        <TextView
            android:id="@+id/rightMessageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/rightImage"
            android:background="@drawable/right_style"
            android:textSize="18sp"
            android:text="@string/hello_world"
            android:layout_toStartOf="@id/rightImage" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>